--- a/src/2-form.html
+++ b/src/2-form.html
@@ -2,7 +2,6 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="stylesheet"
@@ -13,16 +12,25 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100..900&display=swap"
       rel="stylesheet"
     />
-    <title>Vanilla App Template</title>
     <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" type="text/css" href="./css/default.css" />
+    <title>Form</title>
   </head>
   <body>
     <load src="./partials/header.html" />
-
-    <main></main>
-
-    <!-- <load src="./partials/footer.html" /> -->
-
-    <!-- <script type="module" src="./main.js"></script> -->
+    <div class="body-bg">
+      <form class="feedback-form" autocomplete="off">
+        <label>
+          Email
+          <input type="email" name="email" autofocus />
+        </label>
+        <label>
+          Message
+          <textarea name="message" rows="8"></textarea>
+        </label>
+        <button type="submit">Submit</button>
+      </form>
+    </div>
+    <script src="./js/2-form.js" type="module"></script>
   </body>
 </html>
