--- a/src/1-gallery.html
+++ b/src/1-gallery.html
@@ -16,6 +16,6 @@
 
     <div class="gallery"></div>
 
-    <script src="../js/1-gallery.js" type="module"></script>
+    <script src="./js/1-gallery.js" type="module"></script>
   </body>
 </html>
