goit-js-hw-09 ver5

--- a/src/1-gallery.html
+++ b/src/1-gallery.html
@@ -12,8 +12,7 @@
     <title>Document</title>
   </head>
   <body>
-    <load src="./partials/header.html" />
-
+    <a href="./index.html">Back</a>
     <div class="gallery"></div>
 
     <script src="./js/1-gallery.js" type="module"></script>
