--- a/src/2-form.html
+++ b/src/2-form.html
@@ -17,7 +17,7 @@
     <title>Form</title>
   </head>
   <body>
-    <load src="./partials/header.html" />
+    <a href="./index.html">Back</a>
     <div class="body-bg">
       <form class="feedback-form" autocomplete="off">
         <label>
