--- a/src/1-gallery.html
+++ b/src/1-gallery.html
@@ -13,8 +13,7 @@
   </head>
   <body>
     <a href="./index.html">Back</a>
-    <div class="gallery"></div>
-
+    <ul class="gallery"></ul>
     <script src="./js/1-gallery.js" type="module"></script>
   </body>
 </html>
